--- a/views/index.pug
+++ b/views/index.pug
@@ -26,7 +26,7 @@ html
         // Dialogs 
         include includes/dialogs.pug
         // List 
-        .virtual-scroll
+        .list-container.virtual-scroll
             #list.virtual-scroll__container.mdui-list.mdui-p-y-0
         // MDUI JS 
         if bundle
