--- a/src/browser/style/virtualScroll.scss
+++ b/src/browser/style/virtualScroll.scss
@@ -1,24 +1,18 @@
 .virtual-scroll {
-    display: block;
-    flex: 1 1 auto;
-    height: 100%;
-    max-width: 100%;
     overflow: auto;
     position: relative;
     
     &::-webkit-scrollbar {
         display: block !important;
         width: 2px;
+        height: 0;
     }
     
-    &__container {
-        display: block;
-        position: relative;
-    }
+    // &__container {}
     
     &__item {
-        left: 0;
         position: absolute !important;
+        left: 0;
         right: 0;
     }
 }
