--- a/views/includes/sidebar.pug
+++ b/views/includes/sidebar.pug
@@ -6,19 +6,19 @@ button.mdui-fab.mdui-fab-fixed.mdui-ripple.mdui-color-theme-accent.mdui-hidden-s
     //- +card({
         id: "option",
         title: "设置",
-        subtitle: "你可以通过这个工具修改网站设置",
+        subtitle: "修改网站设置",
         buttonText: "打开"
     //- })
     +card({
         id: "custom",
         title: "自定义",
-        subtitle: "你可以通过这个工具引入自己的自定义项",
+        subtitle: "引入自己的自定义项",
         buttonText: "打开"
     })
     +card({
         id: "pwa",
         title: "PWA",
-        subtitle: "你可以通过这个工具使用 PWA 的相关功能",
+        subtitle: "使用 PWA 的相关功能",
         buttonText: "打开"
     })
     //- +card({
@@ -27,3 +27,15 @@ button.mdui-fab.mdui-fab-fixed.mdui-ripple.mdui-color-theme-accent.mdui-hidden-s
         subtitle: "您可以通过这个工具输入穷举的内容",
         buttonText: "打开"
     //- })
+    +card({
+        id: "history",
+        title: "历史记录",
+        subtitle: "管理自己的历史记录",
+        buttonText: "打开"
+    })
+    +card({
+        id: "love",
+        title: "收藏",
+        subtitle: "管理自己的收藏",
+        buttonText: "打开"
+    })
