--- a/views/includes/dialogs.pug
+++ b/views/includes/dialogs.pug
@@ -84,7 +84,7 @@ include ./mixins/dialog.pug
     actions: [
         {
             text: "全部删除",
-            onclick: "_page.vlists.history.clear()"
+            onclick: "_page.history.clear()"
         }
     ]
 })
@@ -99,7 +99,7 @@ include ./mixins/dialog.pug
     actions: [
         {
             text: "全部删除",
-            onclick: "_page.vlists.love.clear()"
+            onclick: "_page.love.clear()"
         }
     ]
 })
