--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,10 +1,20 @@
-.mdui-appbar.mdui-appbar-fixed
+#header.mdui-appbar.mdui-appbar-fixed.mdui-collapse
     .mdui-toolbar.mdui-color-theme(style="height: 60px;")
         i.mdui-icon.material-icons.mdui-text-color-white-icon.mdui-m-r-0(style="width: 32px !important;") edit
         .mdui-textfield.mdui-textfield-white(style="padding: 18px 0; width: 100%")
             input#edit.mdui-textfield-input.mdui-text-color-white-text.mdui-p-t-0.minecraft-font(style="height: 24px; width: 100%; padding-bottom: 4px" type="text")
-    .mdui-toolbar.mdui-color-white(style="height: 60px;")
-        .mdui-list-item-content
-            #grammar.mdui-list-item-title(style="overflow-x: scroll;")
-            #note.mdui-list-item-text.mdui-list-item-one-line(style="overflow-x: scroll;")
-        button#function.mdui-btn.mdui-btn-icon(style="min-width: 24px; width: 24px; margin-left: 0; margin-right: 12px")
+    .mdui-collapse-item
+        .mdui-toolbar.mdui-color-white(style="height: 60px;")
+            .mdui-list-item-content
+                #grammar.mdui-list-item-title(style="overflow-x: scroll;")
+                #note.mdui-list-item-text.mdui-list-item-one-line(style="overflow-x: scroll;")
+            button#function.mdui-btn.mdui-btn-icon(style="display: none; min-width: 24px; width: 24px; margin-left: 0; margin-right: 16px;")
+            i.mdui-collapse-item-header.mdui-collapse-item-arrow.mdui-icon.material-icons.mdui-text-color-theme-icon(style="display: none; min-width: 24px; width: 24px; margin-left: 0; margin-right: 16px;") keyboard_arrow_down
+        .mdui-collapse-item-body(style="transition: height .3s ease-in-out !important;")
+            #toolbar.mdui-toolbar.mdui-color-white(style="height: 60px;")
+                button.mdui-btn.mdui-btn-icon.mdui-ripple(onclick="alert('1')")
+                    i.mdui-icon.material-icons.mdui-text-color-theme-icon search
+                button.mdui-btn.mdui-btn-icon.mdui-ripple(onclick="alert('2')")
+                    i.mdui-icon.material-icons.mdui-text-color-theme-icon refresh
+                button.mdui-btn.mdui-btn-icon.mdui-ripple(onclick="alert('3')")
+                    i.mdui-icon.material-icons.mdui-text-color-theme-icon more_vert
