feat: 更新了 Mojangles 字体文件

--- a/src/browser/style/index.scss
+++ b/src/browser/style/index.scss
@@ -7,9 +7,7 @@
 
 @font-face {
     font-family: Minecraft;
-    src: url(/fonts/minecraft.ttf) format('truetype');
-      /* url(/fonts/minecraft.eot) formaqt('embedded-opentype'),
-         url(/fonts/minecraft.woff) format('woff'); */
+    src: url(/fonts/Mojangles.ttf) format('truetype');
 }
 
 .minecraft-font {
