feat: 为简洁模式添加自动检测的选项

--- a/style/index.scss
+++ b/style/index.scss
@@ -1,13 +1,13 @@
 @import "./mdui.extension.scss";
 @import "./mdui.change.scss";
 @import "./virtualScroll.scss";
-@import "./lite.scss";
+@import "./lite-mode.scss";
 
 // ==========
 
 @font-face {
     font-family: Minecraft;
-    src: url(/fonts/Mojangles.ttf) format('truetype');
+    src: url(/fonts/Mojangles.ttf) format("truetype");
 }
 
 .minecraft-font {
