--- a/style/mdui.extension.scss
+++ b/style/mdui.extension.scss
@@ -17,19 +17,19 @@
 // Textfield
 .mdui-textfield-white {
     .mdui-textfield-input {
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid white !important;
     }
     
     .mdui-textfield-input:not([disabled]):hover {
-        border-bottom: 1px solid white;
-        box-shadow: 0 1px 0 0 white;
-        cursor: pointer;
+        border-bottom: 1px solid white !important;
+        box-shadow: 0 1px 0 0 white !important;
+        cursor: text !important;
     }
     
     &.mdui-textfield-focus .mdui-textfield-input,
     &.mdui-textfield-focus .mdui-textfield-input:hover {
-        border-bottom-color: white;
-        box-shadow: 0 1px 0 0 white;
+        border-bottom-color: white !important;
+        box-shadow: 0 1px 0 0 white !important;
     }
 }
 
