--- a/views/includes/sidebar.pug
+++ b/views/includes/sidebar.pug
@@ -10,9 +10,9 @@ button.mdui-fab.mdui-fab-fixed.mdui-ripple.mdui-color-theme-accent.mdui-hidden-s
         buttonText: "打开"
     //- })
     +card({
-        id: "custom",
-        title: "自定义",
-        subtitle: "引入自己的自定义项",
+        id: "extensions",
+        title: "扩展包",
+        subtitle: "引入自己的扩展包",
         buttonText: "打开"
     })
     +card({
