--- a/style/index.scss
+++ b/style/index.scss
@@ -66,3 +66,15 @@ body {
         }
     }
 }
+
+
+#extensions-vlist {
+    &::-webkit-scrollbar {
+        display: none !important;
+    }
+    
+    .virtual-scroll__item:not(:last-child) {
+        border: 0;
+        border-bottom: 1px solid #d0d0d5;
+    }
+}
