--- a/style/lite-mode.scss
+++ b/style/lite-mode.scss
@@ -96,6 +96,7 @@
         height: 100% !important;
         width: 100% !important;
         margin: 0 !important;
+        border-radius: 0 !important;
     }
 }
 
