fix: 修复了简洁模式下因为列表项内容过长而导致的换行问题

--- a/style/lite-mode.scss
+++ b/style/lite-mode.scss
@@ -78,6 +78,10 @@
             padding: 0;
             height: 20px;
             
+            white-space: nowrap;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            
             .mdui-list-item-title {
                 display: inline;
                 font-size: 13px;
