fix: 修复部分内容主题颜色错误的问题

--- a/views/includes/mixins/card.pug
+++ b/views/includes/mixins/card.pug
@@ -4,4 +4,4 @@ mixin card({ id, title, subtitle, buttonText = "OPEN" })
             .mdui-card-primary-title= title
             .mdui-card-primary-subtitle= subtitle
         .mdui-card-actions
-            button.mdui-btn.mdui-text-color-theme-accent.mdui-ripple.mdui-float-right.mdui-m-r-0(onclick=`_page.dialogs.${id}.open()`)= buttonText
+            button.mdui-btn.mdui-ripple.mdui-float-right.mdui-text-color-theme-accent-revise-primary.mdui-m-r-0(onclick=`_page.dialogs.${id}.open()`)= buttonText
