--- a/views/index.pug
+++ b/views/index.pug
@@ -28,4 +28,4 @@ html
         // MDUI JS 
         script(src="/lib/mdui/dist/js/mdui.min.js")
         // JavaScript 
-        script(type="module" src="/js/bundle.min.js")
+        script(src="/js/bundle.min.js")
