feat: 将简洁模式下列表项的高度是否固定加入设置选项

--- a/style/lite-mode.scss
+++ b/style/lite-mode.scss
@@ -71,7 +71,7 @@
             padding-left: 8px;
             min-height: 24px;
             max-height: 36px;
-            height: calc(100vh / 16);
+            // height: calc(100vh / 16);
         }
         
         .mdui-list-item-content {
