--- a/views/includes/sidebar.pug
+++ b/views/includes/sidebar.pug
@@ -3,12 +3,12 @@ include ./mixins/card.pug
 button.mdui-fab.mdui-fab-fixed.mdui-ripple.mdui-color-theme-accent.mdui-hidden-sm-down(mdui-drawer="{target: '#drawer', overlay: true, swipe: true}" style="z-index: 100")
     i.mdui-icon.material-icons apps
 #drawer.mdui-drawer.mdui-drawer-right.mdui-drawer-always-wide.mdui-drawer-full-height.mdui-drawer-close.mdui-p-t-2.mdui-p-x-2
-    //- +card({
+    +card({
         id: "option",
         title: "设置",
         subtitle: "修改网站设置",
         buttonText: "打开"
-    //- })
+    })
     +card({
         id: "extensions",
         title: "扩展包",
