fix: 修复了 Header Bar 实际上为透明的问题

--- a/style/mdui.extension.scss
+++ b/style/mdui.extension.scss
@@ -1,5 +1,15 @@
 @use "sass:map";
 
+// Header
+#header > .mdui-collapse-item {
+    background-color: #fff !important;
+}
+.mdui-theme-layout-dark {
+    #header > div.mdui-collapse-item {
+        background-color: #303030 !important;
+    }
+}
+
 // Drawer
 .mdui-drawer {
     &.mdui-drawer-always-wide {
